--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
     <script src="https://cdnjs.cloudflare.com/ajax/libs/p5.js/0.8.0/p5.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/p5.js/0.8.0/addons/p5.dom.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/p5.js/0.8.0/addons/p5.sound.min.js"></script>
-    <script src="source/p5.js"></script>
+    <!--script src="source/p5.js"></script-->
     <script src="source/script.js"></script>
   </head>
 
@@ -66,11 +66,18 @@
           <!--<input type="image" src="images/flag.png" alt="Create Finish Line" width="100" height="100" onclick="set_mode(finish_line_mode)">-->
         </div>
 
-         <!-- Finish Line Mode -->
+         <!-- Minkowski Mode -->
         <div class="tooltip">
           <span class="tooltiptext">Draws the Minkowski Sum</span>
           <img src="images/hamids.jpg" alt="Draws the Minkowski Sum" width="100" height="100" onclick="set_mode(minkowski_mode)">
-          <!--<input type="image" src="images/hamids.png" alt="Create Finish Line" width="100" height="100" onclick="set_mode(minkowski_mode)">-->
+          <!--<input type="image" src="images/hamids.jpg" alt="Create Finish Line" width="100" height="100" onclick="set_mode(minkowski_mode)">-->
+        </div>
+
+        <!-- Moving Robot Mode -->
+        <div class="tooltip">
+          <span class="tooltiptext">Moving Robot</span>
+          <img src="images/move.png" alt="Moving Robot" width="100" height="100" onclick="set_mode(moving_robot_mode)">
+          <!--<input type="image" src="images/move.png" alt="Moving Robot" width="100" height="100" onclick="set_mode(moving_robot_mode)">-->
         </div>
 
         <!-- Editing Mode-->
